Fixed bug with input text on mobile.

--- a/app/styles/pomodoro.css
+++ b/app/styles/pomodoro.css
@@ -58,11 +58,11 @@
     opacity: 0.8;
     outline: none;
     height: 4.2rem;
-    user-select: all;
-    -webkit-user-select: all;  /* Chrome all / Safari all */
-    -moz-user-select: all;     /* Firefox all */
-    -ms-user-select: all;      /* IE 10+ */
-    user-select: all;          /* Likely future */
+    user-select: auto;
+    -webkit-user-select: auto;  /* Chrome all / Safari all */
+    -moz-user-select: auto;     /* Firefox all */
+    -ms-user-select: auto;      /* IE 10+ */
+    user-select: auto;          /* Likely future */
 }
 
 #tasks input[type='submit'] {
